Use correct message styling when editing a backend entry When frm_alignright is used, make sure the content goes to the very end

--- a/css/frm_grids.css
+++ b/css/frm_grids.css
@@ -201,6 +201,7 @@
 .frm_form_field.frm_alignright{
 	grid-column-end:-1;
 	grid-row-start: span 100;
+	justify-content: end;
 }
 
 /* RTL Grids */
